[tool.poetry]
name = "bulletin-board"
version = "0.1.0"
description = ""
authors = ["Denis_L <denis88lyapin@gmail.com>"]
readme = "README.md"
packages = [{include = "bulletin_board"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg-binary = "^3.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
